crates/uselesskey/tests/snapshots/snapshots_facade__ed25519_snapshots__facade_ed25519_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
algorithm: Ed25519
private_key_pem_header: "-----BEGIN PRIVATE KEY-----"
private_key_der_len: 83
public_key_pem_header: "-----BEGIN PUBLIC KEY-----"
public_key_der_len: 44
