crates/uselesskey/tests/snapshots/snapshots_facade__ed25519_snapshots__snapshots_ed25519_private_jwk_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redacted
---
alg: EdDSA
crv: Ed25519
d: "[REDACTED]"
kid: "[REDACTED]"
kty: OKP
use: sig
x: "[REDACTED]"
