crates/uselesskey/tests/snapshots/snapshots_facade__ed25519_snapshots__snapshots_ed25519_private_pem_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redact_pem(kp.private_key_pkcs8_pem())
---
-----BEGIN PRIVATE KEY-----
[REDACTED]
[REDACTED]
-----END PRIVATE KEY-----
