crates/uselesskey/tests/snapshots/snapshots_facade__ed25519_snapshots__snapshots_ed25519_public_jwk_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redacted
---
alg: EdDSA
crv: Ed25519
kid: "[REDACTED]"
kty: OKP
use: sig
x: "[REDACTED]"
