crates/uselesskey/tests/snapshots/snapshots_facade__ed25519_snapshots__snapshots_ed25519_public_pem_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redact_pem(kp.public_key_spki_pem())
---
-----BEGIN PUBLIC KEY-----
[REDACTED]
-----END PUBLIC KEY-----
